# torchrun-ddp

./: .gitignore  AGENTS.md  README.md  pyproject.toml  run.sh  train.py
src/torchrun_ddp/: __init__.py  compression.py  main.py  model.py  optimizer.py  training_data.py
